logs/concord-py.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/concord'...
Listing './lib/python3.5/site-packages/concord/internal'...
Listing './lib/python3.5/site-packages/concord/internal/thrift'...
Compiling './lib/python3.5/site-packages/concord/internal/thrift/BoltManagerService.py'...
***   File "./lib/python3.5/site-packages/concord/internal/thrift/BoltManagerService.py", line 141
    except BoltError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/concord/internal/thrift/BoltMetricsService.py'...
***   File "./lib/python3.5/site-packages/concord/internal/thrift/BoltMetricsService.py", line 225
    except BoltError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/concord/internal/thrift/BoltPipeService.py'...
***   File "./lib/python3.5/site-packages/concord/internal/thrift/BoltPipeService.py", line 96
    except BoltError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/concord/internal/thrift/BoltProxyService.py'...
***   File "./lib/python3.5/site-packages/concord/internal/thrift/BoltProxyService.py", line 154
    except BoltError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/concord/internal/thrift/BoltSchedulerService.py'...
***   File "./lib/python3.5/site-packages/concord/internal/thrift/BoltSchedulerService.py", line 217
    except BoltError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/concord/internal/thrift/ComputationService.py'...
***   File "./lib/python3.5/site-packages/concord/internal/thrift/ComputationService.py", line 236
    except BoltError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/concord/internal/thrift/MutableEphemeralStateService.py'...
***   File "./lib/python3.5/site-packages/concord/internal/thrift/MutableEphemeralStateService.py", line 140
    except BoltError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/concord_py-0.3.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.9.0.dist-info'...
Listing './lib/python3.5/site-packages/thrift'...
Listing './lib/python3.5/site-packages/thrift/protocol'...
Listing './lib/python3.5/site-packages/thrift/server'...
Listing './lib/python3.5/site-packages/thrift/transport'...
Listing './lib/python3.5/site-packages/thrift-0.9.2.egg-info'...
Listing './lib/python3.5/site-packages/wheel'...
Listing './lib/python3.5/site-packages/wheel/signatures'...
Listing './lib/python3.5/site-packages/wheel/test'...
Listing './lib/python3.5/site-packages/wheel/test/complex-dist'...
Listing './lib/python3.5/site-packages/wheel/test/complex-dist/complexdist'...
Listing './lib/python3.5/site-packages/wheel/test/headers.dist'...
Listing './lib/python3.5/site-packages/wheel/test/simple.dist'...
Listing './lib/python3.5/site-packages/wheel/test/simple.dist/simpledist'...
Listing './lib/python3.5/site-packages/wheel/tool'...
Listing './lib/python3.5/site-packages/wheel-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.1.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
